--- a/css/layout.css
+++ b/css/layout.css
@@ -40,154 +40,165 @@
   margin: 16px 0 !important;
 }
 
-/* line 71, ../scss/layout.scss */
+/* line 70, ../scss/layout.scss */
+.cms-content-fields .ui-tabs-nav {
+  border-color: #d8d8dc;
+}
+
+/* line 74, ../scss/layout.scss */
+.ui-tabs .ui-tabs-nav .ui-state-default a,
+.ui-tabs .ui-tabs-nav .ui-state-active a {
+  border-color: #465762;
+}
+
+/* line 80, ../scss/layout.scss */
 #Root_Main .cms-edit-form .message {
   margin: 16px 0 8px 0 !important;
 }
 
-/* line 78, ../scss/layout.scss */
+/* line 87, ../scss/layout.scss */
 .cms a {
   color: #3ba1c7;
 }
-/* line 81, ../scss/layout.scss */
+/* line 90, ../scss/layout.scss */
 .cms a:hover {
   color: #3492b5;
 }
-/* line 86, ../scss/layout.scss */
+/* line 95, ../scss/layout.scss */
 .cms .cms-content-fields {
   background: #ffffff;
 }
-/* line 90, ../scss/layout.scss */
+/* line 99, ../scss/layout.scss */
 .cms .cms-content {
   background: #ffffff;
 }
-/* line 98, ../scss/layout.scss */
+/* line 107, ../scss/layout.scss */
 .cms .cms-content-header {
   position: relative;
   background: #f3f3f4;
   color: #465762;
 }
-/* line 117, ../scss/layout.scss */
+/* line 126, ../scss/layout.scss */
 .cms .ss-ui-button {
   background: #d8d8dc;
   border-color: #d8d8dc;
 }
-/* line 121, ../scss/layout.scss */
+/* line 130, ../scss/layout.scss */
 .cms .ss-ui-button:active, .cms .ss-ui-button:hover, .cms .ss-ui-button:focus {
   background: #cbcbcf;
   border-color: #cbcbcf;
 }
-/* line 128, ../scss/layout.scss */
+/* line 137, ../scss/layout.scss */
 .cms .ss-ui-button.ss-ui-action-constructive {
   background: #7DC73B;
   border-color: #7DC73B;
 }
-/* line 132, ../scss/layout.scss */
+/* line 141, ../scss/layout.scss */
 .cms .ss-ui-button.ss-ui-action-constructive:active, .cms .ss-ui-button.ss-ui-action-constructive:hover, .cms .ss-ui-button.ss-ui-action-constructive:focus {
   background: #75bd36;
   border-color: #75bd36;
 }
-/* line 142, ../scss/layout.scss */
+/* line 151, ../scss/layout.scss */
 .cms .ui-widget.gridfield-better-buttons-delete {
   background: #DC363B !important;
   border-color: #DC363B !important;
 }
-/* line 146, ../scss/layout.scss */
+/* line 155, ../scss/layout.scss */
 .cms .ui-widget.gridfield-better-buttons-delete:active, .cms .ui-widget.gridfield-better-buttons-delete:hover, .cms .ui-widget.gridfield-better-buttons-delete:focus {
   background: #da292e !important;
   border-color: #da292e !important;
 }
 
-/* line 156, ../scss/layout.scss */
+/* line 165, ../scss/layout.scss */
 .cms-content-actions,
 .cms-preview-controls {
   background: #f3f3f4;
   border-top: none;
 }
 
-/* line 163, ../scss/layout.scss */
+/* line 172, ../scss/layout.scss */
 .cms-menu {
   background: #f3f3f4;
 }
-/* line 168, ../scss/layout.scss */
+/* line 177, ../scss/layout.scss */
 .cms-menu .cms-logo-header.north {
   background: #465762;
 }
-/* line 173, ../scss/layout.scss */
+/* line 182, ../scss/layout.scss */
 .cms-menu .cms-logo {
   border-bottom: none;
 }
-/* line 177, ../scss/layout.scss */
+/* line 186, ../scss/layout.scss */
 .cms-menu .cms-login-status {
   border-top: 1px solid #313d44;
 }
-/* line 183, ../scss/layout.scss */
+/* line 192, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list {
   border-top: 1px solid #313d44;
 }
-/* line 187, ../scss/layout.scss */
+/* line 196, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li a {
   border-top: none;
   border-bottom: none;
   background: #f3f3f4;
   color: #465762;
 }
-/* line 195, ../scss/layout.scss */
+/* line 204, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li:hover a {
   color: #ffffff;
   background: #3ba1c7;
 }
-/* line 208, ../scss/layout.scss */
+/* line 217, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li.current a {
   background: #3ba1c7;
   color: #ffffff;
 }
-/* line 212, ../scss/layout.scss */
+/* line 221, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li.current a:hover {
   background: #3492b5;
 }
-/* line 218, ../scss/layout.scss */
+/* line 227, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li.current.opened a {
   border-top: none;
 }
-/* line 229, ../scss/layout.scss */
+/* line 238, ../scss/layout.scss */
 .cms-menu .cms-panel-toggle.south {
   border-top: 1px solid #d8d8dc;
 }
-/* line 234, ../scss/layout.scss */
+/* line 243, ../scss/layout.scss */
 .cms-menu .cms-panel-toggle a span {
   color: #465762 !important;
 }
 
-/* line 242, ../scss/layout.scss */
+/* line 251, ../scss/layout.scss */
 .rightsidebar {
   background: #f3f3f4;
   border-left: none !important;
 }
 
-/* line 248, ../scss/layout.scss */
+/* line 257, ../scss/layout.scss */
 .cms-panel.cms-content-tools .cms-panel-toggle.south {
   background: #f3f3f4 !important;
 }
 
-/* line 252, ../scss/layout.scss */
+/* line 261, ../scss/layout.scss */
 .cms-panel.cms-content-tools .cms-panel-toggle.south {
   border-top: 1px solid #d8d8dc !important;
 }
 
-/* line 256, ../scss/layout.scss */
+/* line 265, ../scss/layout.scss */
 .cms-content-tools .cms-panel-header {
   border-color: #d8d8dc !important;
 }
 
-/* line 261, ../scss/layout.scss */
+/* line 270, ../scss/layout.scss */
 .cms a.icon-button.font-icon-search,
 .cms .ui-tabs .ui-tabs-nav li a.font-icon-search.icon-button,
 .ui-tabs .ui-tabs-nav li .cms a.font-icon-search.icon-button,
 .cms button.ss-ui-button.icon-button.font-icon-search {
   color: #465762;
 }
-/* line 267, ../scss/layout.scss */
+/* line 276, ../scss/layout.scss */
 .cms a.icon-button.font-icon-search:hover,
 .cms .ui-tabs .ui-tabs-nav li a.font-icon-search.icon-button:hover,
 .ui-tabs .ui-tabs-nav li .cms a.font-icon-search.icon-button:hover,
@@ -195,89 +206,128 @@
   color: #3ba1c7;
 }
 
-/* line 273, ../scss/layout.scss */
+/* line 282, ../scss/layout.scss */
 .ui-tabs .ui-tabs-nav .ui-state-default a {
   color: #465762;
 }
-/* line 276, ../scss/layout.scss */
+/* line 285, ../scss/layout.scss */
 .ui-tabs .ui-tabs-nav .ui-state-default a:hover {
   color: #3ba1c7;
 }
 
-/* line 281, ../scss/layout.scss */
+/* line 290, ../scss/layout.scss */
 .ui-tabs.cms-tabset-primary .ui-tabs-nav .ui-state-active a,
 .ui-tabs .ui-tabs-nav.cms-tabset-nav-primary .ui-state-active a,
 .ui-tabs .cms-content-header-tabs .ui-tabs-nav .ui-state-active a {
   border-bottom-color: #465762;
 }
 
-/* line 288, ../scss/layout.scss */
+/* line 297, ../scss/layout.scss */
 .ui-widget-content,
 .ui-widget {
   color: #465762;
 }
 
-/* line 294, ../scss/layout.scss */
+/* line 303, ../scss/layout.scss */
 .chzn-container-single .chzn-single {
   color: #465762;
 }
 
-/* line 298, ../scss/layout.scss */
+/* line 307, ../scss/layout.scss */
 .chzn-container .chzn-drop {
   color: #465762;
   border-color: #d8d8dc;
 }
 
-/* line 303, ../scss/layout.scss */
+/* line 312, ../scss/layout.scss */
 .chzn-container-active .chzn-drop {
   border-color: #3ba1c7 !important;
 }
 
-/* line 307, ../scss/layout.scss */
+/* line 316, ../scss/layout.scss */
+.chzn-container .chzn-choices {
+  border-color: #d8d8dc !important;
+}
+
+/* line 320, ../scss/layout.scss */
+.chzn-container-active .chzn-choices {
+  border-color: #3ba1c7 !important;
+}
+
+/* line 324, ../scss/layout.scss */
 .chzn-container .chzn-results .highlighted {
   background: #3ba1c7;
 }
 
-/* line 311, ../scss/layout.scss */
+/* line 328, ../scss/layout.scss */
 .field {
   border: none !important;
 }
-/* line 315, ../scss/layout.scss */
+/* line 332, ../scss/layout.scss */
 .field .chzn-container-active .chzn-single {
   border-color: #3ba1c7 !important;
 }
-/* line 319, ../scss/layout.scss */
+/* line 336, ../scss/layout.scss */
 .field input {
   border-color: #d8d8dc !important;
 }
-/* line 322, ../scss/layout.scss */
+/* line 339, ../scss/layout.scss */
 .field input:focus {
   border-color: #3ba1c7 !important;
 }
 
-/* line 328, ../scss/layout.scss */
+/* line 345, ../scss/layout.scss */
 .chzn-container-single .chzn-single {
   border-color: #d8d8dc !important;
 }
 
-/* line 337, ../scss/layout.scss */
+/* line 354, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr.title th {
   background: #465762;
   border-color: #313d44;
 }
-/* line 344, ../scss/layout.scss */
+/* line 361, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr th.main {
   background: #3ba1c7;
   border-color: #3492b5;
   border-top: none;
   border-left: none;
 }
-/* line 353, ../scss/layout.scss */
+/* line 370, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr td.bottom-all {
   background: #465762;
   border-color: #313d44;
 }
-/* line 358, ../scss/layout.scss */
+/* line 375, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr td:last-child, .cms table.ss-gridfield-table tr td:first-child {
   border-right-color: #f3f3f4;
+}
+
+/* line 386, ../scss/layout.scss */
+.ss-uploadfield .middleColumn {
+  border-color: #d8d8dc !important;
+}
+
+/* line 391, ../scss/layout.scss */
+div.field.has-border {
+  border-bottom: none !important;
+}
+
+/* line 397, ../scss/layout.scss */
+.defaultSkin td.mceToolbar {
+  background: #f3f3f4 !important;
+}
+/* line 401, ../scss/layout.scss */
+.defaultSkin a.mceButtonEnabled:hover {
+  border: 1px solid #3492b5 !important;
+  background-color: #3ba1c7 !important;
+}
+/* line 407, ../scss/layout.scss */
+.defaultSkin table.mceLayout,
+.defaultSkin table.mceLayout tr.mceFirst td {
+  border-color: #d8d8dc !important;
+}
+/* line 413, ../scss/layout.scss */
+.defaultSkin .mceIframeContainer {
+  border-color: #d8d8dc !important;
 }
