--- a/css/layout.css
+++ b/css/layout.css
@@ -304,36 +304,56 @@
   border-right-color: #f3f3f4;
 }
 
-/* line 386, ../scss/layout.scss */
+/* line 385, ../scss/layout.scss */
+.ss-loading-screen {
+  background: #f8f9fa;
+  background: -moz-linear-gradient(top, #f8f9fa 0%, #f8f9fa 54%, #ffffff 54%, #ffffff 100%);
+  background: -webkit-linear-gradient(top, #f8f9fa 0%, #f8f9fa 54%, #ffffff 54%, #ffffff 100%);
+  background: linear-gradient(to bottom, #f8f9fa 0%, #f8f9fa 54%, #ffffff 54%, #ffffff 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8f9fa', endColorstr='#ffffff',GradientType=0 );
+}
+/* line 392, ../scss/layout.scss */
+.ss-loading-screen:after {
+  content: ' ';
+  position: absolute;
+  top: 54%;
+  left: 0;
+  right: 0;
+  height: 2px;
+  margin-top: -3px;
+  background: #f3f3f4;
+}
+
+/* line 406, ../scss/layout.scss */
 .ss-uploadfield .middleColumn {
   border-color: #d8d8dc !important;
 }
 
-/* line 391, ../scss/layout.scss */
+/* line 411, ../scss/layout.scss */
 div.field.has-border {
   border-bottom: none !important;
 }
 
-/* line 397, ../scss/layout.scss */
+/* line 417, ../scss/layout.scss */
 .defaultSkin td.mceToolbar {
   background: #f3f3f4 !important;
 }
-/* line 401, ../scss/layout.scss */
+/* line 421, ../scss/layout.scss */
 .defaultSkin a.mceButtonEnabled:hover {
   border: 1px solid #3492b5 !important;
   background-color: #3ba1c7 !important;
 }
-/* line 407, ../scss/layout.scss */
+/* line 427, ../scss/layout.scss */
 .defaultSkin table.mceLayout,
 .defaultSkin table.mceLayout tr.mceFirst td {
   border-color: #d8d8dc !important;
 }
-/* line 413, ../scss/layout.scss */
+/* line 433, ../scss/layout.scss */
 .defaultSkin .mceIframeContainer {
   border-color: #d8d8dc !important;
 }
 
-/* line 420, ../scss/layout.scss */
+/* line 440, ../scss/layout.scss */
 .field input[disabled],
 .field input.disabled,
 .field textarea[disabled],
@@ -351,7 +371,7 @@ div.field.has-border {
   background-image: linear-gradient(#eaeaea, #ffffff 10%);
   border-color: #d8d8dc;
 }
-/* line 437, ../scss/layout.scss */
+/* line 457, ../scss/layout.scss */
 .field input[disabled]:active, .field input[disabled]:focus,
 .field input.disabled:active,
 .field input.disabled:focus,
@@ -366,12 +386,12 @@ div.field.has-border {
   border-color: #DC363B !important;
 }
 
-/* line 444, ../scss/layout.scss */
+/* line 464, ../scss/layout.scss */
 span.disabled {
   opacity: 0.5;
 }
 
-/* line 449, ../scss/layout.scss */
+/* line 469, ../scss/layout.scss */
 button.ss-gridfield-add-new-inline {
   margin: 16px 0 8px 0 !important;
 }
