--- a/css/layout.css
+++ b/css/layout.css
@@ -134,77 +134,85 @@
 .cms-menu .cms-logo {
   border-bottom: none;
 }
-/* line 190, ../scss/layout.scss */
+/* line 189, ../scss/layout.scss */
+.cms-menu .cms-logo a {
+  display: none;
+}
+/* line 193, ../scss/layout.scss */
+.cms-menu .cms-logo span {
+  margin-left: 0;
+}
+/* line 198, ../scss/layout.scss */
 .cms-menu .cms-login-status {
   border-top: 1px solid #313d44;
 }
-/* line 196, ../scss/layout.scss */
+/* line 204, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list {
   border-top: 1px solid #313d44;
 }
-/* line 200, ../scss/layout.scss */
+/* line 208, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li a {
   border-top: none;
   border-bottom: none;
   background: #f3f3f4;
   color: #465762;
 }
-/* line 208, ../scss/layout.scss */
+/* line 216, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li:hover a {
   color: #ffffff;
   background: #3ba1c7;
 }
-/* line 221, ../scss/layout.scss */
+/* line 229, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li.current a {
   background: #3ba1c7;
   color: #ffffff;
 }
-/* line 225, ../scss/layout.scss */
+/* line 233, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li.current a:hover {
   background: #3492b5;
 }
-/* line 231, ../scss/layout.scss */
+/* line 239, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li.current.opened a {
   border-top: none;
 }
-/* line 242, ../scss/layout.scss */
+/* line 250, ../scss/layout.scss */
 .cms-menu .cms-panel-toggle.south {
   border-top: 1px solid #d8d8dc;
 }
-/* line 247, ../scss/layout.scss */
+/* line 255, ../scss/layout.scss */
 .cms-menu .cms-panel-toggle a span {
   color: #465762 !important;
 }
 
-/* line 255, ../scss/layout.scss */
+/* line 263, ../scss/layout.scss */
 .rightsidebar {
   background: #f3f3f4;
   border-left: none !important;
 }
 
-/* line 261, ../scss/layout.scss */
+/* line 269, ../scss/layout.scss */
 .cms-panel.cms-content-tools .cms-panel-toggle.south {
   background: #f3f3f4 !important;
 }
 
-/* line 265, ../scss/layout.scss */
+/* line 273, ../scss/layout.scss */
 .cms-panel.cms-content-tools .cms-panel-toggle.south {
   border-top: 1px solid #d8d8dc !important;
 }
 
-/* line 269, ../scss/layout.scss */
+/* line 277, ../scss/layout.scss */
 .cms-content-tools .cms-panel-header {
   border-color: #d8d8dc !important;
 }
 
-/* line 274, ../scss/layout.scss */
+/* line 282, ../scss/layout.scss */
 .cms a.icon-button.font-icon-search,
 .cms .ui-tabs .ui-tabs-nav li a.font-icon-search.icon-button,
 .ui-tabs .ui-tabs-nav li .cms a.font-icon-search.icon-button,
 .cms button.ss-ui-button.icon-button.font-icon-search {
   color: #465762;
 }
-/* line 280, ../scss/layout.scss */
+/* line 288, ../scss/layout.scss */
 .cms a.icon-button.font-icon-search:hover,
 .cms .ui-tabs .ui-tabs-nav li a.font-icon-search.icon-button:hover,
 .ui-tabs .ui-tabs-nav li .cms a.font-icon-search.icon-button:hover,
@@ -212,138 +220,138 @@
   color: #3ba1c7;
 }
 
-/* line 286, ../scss/layout.scss */
+/* line 294, ../scss/layout.scss */
 .ui-tabs .ui-tabs-nav .ui-state-default a {
   color: #465762;
 }
-/* line 289, ../scss/layout.scss */
+/* line 297, ../scss/layout.scss */
 .ui-tabs .ui-tabs-nav .ui-state-default a:hover {
   color: #3ba1c7;
 }
 
-/* line 294, ../scss/layout.scss */
+/* line 302, ../scss/layout.scss */
 .ui-tabs.cms-tabset-primary .ui-tabs-nav .ui-state-active a,
 .ui-tabs .ui-tabs-nav.cms-tabset-nav-primary .ui-state-active a,
 .ui-tabs .cms-content-header-tabs .ui-tabs-nav .ui-state-active a {
   border-bottom-color: #465762;
 }
 
-/* line 301, ../scss/layout.scss */
+/* line 309, ../scss/layout.scss */
 .ui-widget-content,
 .ui-widget {
   color: #465762;
 }
 
-/* line 307, ../scss/layout.scss */
+/* line 315, ../scss/layout.scss */
 .chzn-container-single .chzn-single {
   color: #465762;
 }
 
-/* line 311, ../scss/layout.scss */
+/* line 319, ../scss/layout.scss */
 .chzn-container .chzn-drop {
   color: #465762;
   border-color: #d8d8dc;
 }
 
-/* line 316, ../scss/layout.scss */
+/* line 324, ../scss/layout.scss */
 .chzn-container-active .chzn-drop {
   border-color: #3ba1c7 !important;
 }
 
-/* line 320, ../scss/layout.scss */
+/* line 328, ../scss/layout.scss */
 .chzn-container .chzn-choices {
   border-color: #d8d8dc !important;
 }
 
-/* line 324, ../scss/layout.scss */
+/* line 332, ../scss/layout.scss */
 .chzn-container-active .chzn-choices {
   border-color: #3ba1c7 !important;
 }
 
-/* line 328, ../scss/layout.scss */
+/* line 336, ../scss/layout.scss */
 .chzn-container .chzn-results .highlighted {
   background: #3ba1c7;
 }
 
-/* line 332, ../scss/layout.scss */
+/* line 340, ../scss/layout.scss */
 .field {
   border: none !important;
 }
-/* line 336, ../scss/layout.scss */
+/* line 344, ../scss/layout.scss */
 .field .chzn-container-active .chzn-single {
   border-color: #3ba1c7 !important;
 }
-/* line 340, ../scss/layout.scss */
+/* line 348, ../scss/layout.scss */
 .field input {
   border-color: #d8d8dc !important;
 }
-/* line 343, ../scss/layout.scss */
+/* line 351, ../scss/layout.scss */
 .field input:focus {
   border-color: #3ba1c7 !important;
 }
 
-/* line 349, ../scss/layout.scss */
+/* line 357, ../scss/layout.scss */
 .chzn-container-single .chzn-single {
   border-color: #d8d8dc !important;
 }
 
-/* line 358, ../scss/layout.scss */
+/* line 366, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr.title th {
   background: #465762;
   border-color: #313d44;
 }
-/* line 365, ../scss/layout.scss */
+/* line 373, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr th.main {
   background: #3ba1c7;
   border-color: #3492b5;
   border-top: none;
   border-left: none;
 }
-/* line 374, ../scss/layout.scss */
+/* line 382, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr td.bottom-all {
   background: #465762;
   border-color: #313d44;
 }
-/* line 379, ../scss/layout.scss */
+/* line 387, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr td:last-child, .cms table.ss-gridfield-table tr td:first-child {
   border-right-color: #f3f3f4;
 }
 
-/* line 389, ../scss/layout.scss */
+/* line 397, ../scss/layout.scss */
 .ss-loading-screen {
   background: #ffffff;
 }
 
-/* line 411, ../scss/layout.scss */
+/* line 419, ../scss/layout.scss */
 .ss-uploadfield .middleColumn {
   border-color: #d8d8dc !important;
 }
 
-/* line 416, ../scss/layout.scss */
+/* line 424, ../scss/layout.scss */
 div.field.has-border {
   border-bottom: none !important;
 }
 
-/* line 422, ../scss/layout.scss */
+/* line 430, ../scss/layout.scss */
 .defaultSkin td.mceToolbar {
   background: #f3f3f4 !important;
 }
-/* line 426, ../scss/layout.scss */
+/* line 434, ../scss/layout.scss */
 .defaultSkin a.mceButtonEnabled:hover {
   border: 1px solid #3492b5 !important;
   background-color: #3ba1c7 !important;
 }
-/* line 432, ../scss/layout.scss */
+/* line 440, ../scss/layout.scss */
 .defaultSkin table.mceLayout,
 .defaultSkin table.mceLayout tr.mceFirst td {
   border-color: #d8d8dc !important;
 }
-/* line 438, ../scss/layout.scss */
+/* line 446, ../scss/layout.scss */
 .defaultSkin .mceIframeContainer {
   border-color: #d8d8dc !important;
 }
 
-/* line 445, ../scss/layout.scss */
+/* line 453, ../scss/layout.scss */
 .field input[disabled],
 .field input.disabled,
 .field textarea[disabled],
@@ -361,7 +369,7 @@ div.field.has-border {
   background-image: linear-gradient(#eaeaea, #ffffff 10%);
   border-color: #d8d8dc;
 }
-/* line 462, ../scss/layout.scss */
+/* line 470, ../scss/layout.scss */
 .field input[disabled]:active, .field input[disabled]:focus,
 .field input.disabled:active,
 .field input.disabled:focus,
@@ -376,17 +384,17 @@ div.field.has-border {
   border-color: #DC363B !important;
 }
 
-/* line 469, ../scss/layout.scss */
+/* line 477, ../scss/layout.scss */
 span.disabled {
   opacity: 0.5;
 }
 
-/* line 474, ../scss/layout.scss */
+/* line 482, ../scss/layout.scss */
 button.ss-gridfield-add-new-inline {
   margin: 16px 0 8px 0 !important;
 }
 
-/* line 479, ../scss/layout.scss */
+/* line 487, ../scss/layout.scss */
 .ui-dialog {
   background: #ffffff;
   background-clip: content-box;
@@ -401,15 +409,251 @@ button.ss-gridfield-add-new-inline {
   box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.3);
 }
 
-/* line 493, ../scss/layout.scss */
+/* line 501, ../scss/layout.scss */
 .betterbuttons-nested-form {
+  position: relative;
   color: #465762 !important;
 }
-/* line 496, ../scss/layout.scss */
-.betterbuttons-nested-form select.dropdown {
-  border-color: #d8d8dc !important;
+/* line 506, ../scss/layout.scss */
+.betterbuttons-nested-form fieldset > div:first-of-type {
+  margin-top: 0;
 }
-/* line 499, ../scss/layout.scss */
-.betterbuttons-nested-form select.dropdown:focus {
+/* line 509, ../scss/layout.scss */
+.betterbuttons-nested-form fieldset > div:first-of-type label {
+  padding-top: 0;
+}
+/* line 515, ../scss/layout.scss */
+.betterbuttons-nested-form .field label.left {
+  width: 100%;
+}
+/* line 519, ../scss/layout.scss */
+.betterbuttons-nested-form strong {
+  font-weight: bold;
+}
+/* line 523, ../scss/layout.scss */
+.betterbuttons-nested-form form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -o-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  margin: 0;
+  width: 512px;
+}
+/* line 536, ../scss/layout.scss */
+.betterbuttons-nested-form select.dropdown {
+  margin-left: 0;
+  height: 30px;
+  line-height: 30px;
+  font-size: 12px;
+  background-image: url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgi…3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiBmaWxsPSJ1cmwoI2dyYWQpIiAvPjwvc3ZnPiA=");
+  background-size: 100%;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #efefef), color-stop(10%, #ffffff), color-stop(90%, #ffffff), color-stop(100%, #efefef));
+  background-image: -moz-linear-gradient(#efefef, #ffffff 10%, #ffffff 90%, #efefef);
+  background-image: -webkit-linear-gradient(#efefef, #ffffff 10%, #ffffff 90%, #efefef);
+  background-image: linear-gradient(#efefef, #ffffff 10%, #ffffff 90%, #efefef);
+  border: 1px solid #f3f3f4;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 0 0 0 8px;
+  color: #465762;
+  text-decoration: none;
+}
+/* line 562, ../scss/layout.scss */
+.betterbuttons-nested-form select.dropdown:focus, .betterbuttons-nested-form select.dropdown:active {
+  outline: none;
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0;
   border-color: #3ba1c7 !important;
+}
+
+/* line 577, ../scss/layout.scss */
+.cf, .fieldgroup-50, .fieldgroup-33 {
+  *zoom: 1;
+}
+/* line 580, ../scss/layout.scss */
+.cf:before, .fieldgroup-50:before, .fieldgroup-33:before, .cf:after, .fieldgroup-50:after, .fieldgroup-33:after {
+  content: '';
+  display: table;
+}
+/* line 585, ../scss/layout.scss */
+.cf:after, .fieldgroup-50:after, .fieldgroup-33:after {
+  clear: both;
+}
+
+/* line 590, ../scss/layout.scss */
+.clear {
+  clear: both;
+}
+/* line 593, ../scss/layout.scss */
+.clear.optionset {
+  clear: none;
+}
+/* line 596, ../scss/layout.scss */
+.clear.optionset.field {
+  clear: both;
+}
+
+/* line 604, ../scss/layout.scss */
+.field.full {
+  width: 100%;
+  margin-left: 0;
+}
+/* line 608, ../scss/layout.scss */
+.field.full + div {
+  margin-left: 0;
+}
+/* line 613, ../scss/layout.scss */
+.field.has-border {
+  padding: 0px 0px 7px !important;
+  margin: 8px 0px !important;
+  border-bottom: 1px solid #f3f3f4 !important;
+}
+/* line 619, ../scss/layout.scss */
+.field.no-border {
+  padding: 0px !important;
+  margin: 0px !important;
+  border-bottom: 0 !important;
+}
+
+/* line 629, ../scss/layout.scss */
+.optionset.full li {
+  width: auto;
+  margin-right: 2em;
+}
+
+/* line 637, ../scss/layout.scss */
+.field-with-extra {
+  float: left;
+  margin-top: 0;
+}
+/* line 641, ../scss/layout.scss */
+.field-with-extra input {
+  width: 512px !important;
+}
+
+/* line 646, ../scss/layout.scss */
+.field-extra {
+  float: left;
+  margin-top: 0;
+  margin-left: 1.5%;
+  min-width: 250px;
+  margin-bottom: 0;
+}
+
+/* line 655, ../scss/layout.scss */
+.no-label label {
+  display: none !important;
+}
+/* line 659, ../scss/layout.scss */
+.no-label .middleColumn {
+  margin-left: 0;
+}
+
+/* line 668, ../scss/layout.scss */
+.fieldgroup-50 > * {
+  float: left;
+  width: 49.25%;
+}
+/* line 672, ../scss/layout.scss */
+.fieldgroup-50 > *:nth-of-type(2n+2) {
+  margin-left: 1.5%;
+}
+/* line 676, ../scss/layout.scss */
+.fieldgroup-50 > *.full {
+  width: 100%;
+  margin-left: 0;
+}
+/* line 681, ../scss/layout.scss */
+.fieldgroup-50 > *.left {
+  margin-left: 0;
+}
+/* line 685, ../scss/layout.scss */
+.fieldgroup-50 > *.right {
+  margin-left: 1.5%;
+}
+
+/* line 695, ../scss/layout.scss */
+.fieldgroup-33 > * {
+  float: left;
+  width: 32.33%;
+}
+/* line 699, ../scss/layout.scss */
+.fieldgroup-33 > *:nth-of-type(2n+2), .fieldgroup-33 > *:nth-of-type(3n+3) {
+  margin-left: 1.5%;
+}
+/* line 704, ../scss/layout.scss */
+.fieldgroup-33 > *.full {
+  width: 100%;
+  margin-left: 0;
+}
+/* line 709, ../scss/layout.scss */
+.fieldgroup-33 > *.left {
+  margin-left: 0;
+}
+/* line 713, ../scss/layout.scss */
+.fieldgroup-33 > *.right {
+  margin-left: 1.5%;
+}
+
+/* line 721, ../scss/layout.scss */
+.field-50.composite, .field-50.field {
+  float: left;
+  width: 49.25%;
+  margin-top: 0;
+}
+/* line 727, ../scss/layout.scss */
+.field-50.composite + .field-50, .field-50.field + .field-50 {
+  margin-left: 1.5%;
+}
+
+/* line 735, ../scss/layout.scss */
+.highlighted.composite {
+  float: left;
+  width: auto;
+  margin: 16px 0;
+  padding: 16px;
+  background: #f3f3f4;
+}
+/* line 742, ../scss/layout.scss */
+.highlighted.composite > h2 {
+  margin: 0 0 16px 0;
+  line-height: 1;
+}
+/* line 748, ../scss/layout.scss */
+.highlighted.field {
+  color: #3ba1c7;
+  font-weight: bold;
+}
+
+/* line 755, ../scss/layout.scss */
+.chzn-container {
+  width: 100% !important;
+}
+
+/* line 759, ../scss/layout.scss */
+.chzn-container .chzn-drop {
+  width: calc(100% - 2px) !important;
+}
+
+/* line 765, ../scss/layout.scss */
+.cms-content-header.north .cms_backlink {
+  display: none;
+}
+
+/* line 770, ../scss/layout.scss */
+.better-buttons-utils,
+.dashboard-top-buttons {
+  top: 12px !important;
 }
